--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
 		<meta charset="UTF-8">
 		<title>Background</title>
 		<style>
-			body {
-				margin: 0;
+		@keyframes bgimage {
+			0% {
+				background-color: #450172;
 			}
+			25% {
+				background-color: #25098f;
+			}
+			50% {
+				background-color: #056466;
+			}
+			75% {
+				background-color: #25098f;
+			}
+			100% {
+				background-color: #450172;
+			}
+		}
+		body {
+			margin: 0;
+			animation: bgimage 40s ease-in-out infinite alternate;
+		}
 		</style>
 	</head>
 	<body>
@@ -21,37 +39,50 @@
 			var W = canvas.width;
 			var H = canvas.height;
 
-			var bgcolor = "#000000";
-
 			function Particle(){
+				
 				this.x = Math.random()*W;
 				this.y = Math.random()*H;
-				this.vx = Math.random()*1;
+				this.vx = Math.random()*5;
 				this.vy = Math.random()*5;
-				this.particleSize = Math.random()*5;
+				this.particleSize = Math.random()*3;
 				this.radius = this.particleSize/2;
-				this.color = "#ffffff";
+				this.opacityLimit = Math.random();
+				this.opacity = 0;
+
+				var basex = this.x;
+				var variance = Math.random()*80;
+
 				this.draw = function(){
 					ctx.beginPath();
 					ctx.fillStyle = this.color;
 					ctx.arc(this.x, this.y, this.radius, 0, Math.PI*2, false);
 					ctx.fill();
 
-					this.x += this.vx;
 					this.y += this.vy;
-				}
+					this.x = (Math.sin((this.y/360)*Math.PI) * (this.vx + variance)) + basex;
+
+					if (this.opacity < this.opacityLimit){
+						this.opacity += 0.1;
+						this.color = "rgba(200,200,200,"+ this.opacity +")";
+					}
+					if (this.x < 0 || this.x > W || this.y < 0 || this.y > H) {
+						particles.splice(particles.indexOf(this), 1);
+					}
+				}	
 			}
+
 			var particles = [];
 
 			setInterval(function(){
 
-				ctx.fillStyle = bgcolor;
-				ctx.fillRect(0, 0, W, H);
+				ctx.clearRect(0, 0, W, H);
 				particles.push(new Particle());
 				for (var i = 0; i < particles.length; i++){
 					particles[i].draw();
 				}
-			}, 60)
+
+			}, 20);
 
 
 		</script>
